--- a/buildspec.yml
+++ b/buildspec.yml
@@ -166,6 +166,10 @@ phases:
 
 # Test chrome driver executable #
       - cd /opt && \
+      - uname -a
+      - ls -lrt 
+      - file chromedriver
+      - chmod +x ./chromedriver
       - test_chrome_driver=$(./chromedriver -v | grep "$CHROME_STABLE_REVISION_ID" || echo "no matches")
       - |
         if [[ "$test_chrome_driver" = "no matches" ]]; then
