--- a/buildspec.yml
+++ b/buildspec.yml
@@ -19,7 +19,7 @@ phases:
       - echo $AWS_CODEBUILD_ARCH
 
       # Determine Amazon Linux version
-      - AMAZON_LINUX_VERSION=$(cat /etc/system-release-cpe | cut -d: -f5)
+      - AMAZON_LINUX_VERSION=$(cat /etc/system-release-cpe | cut -d -f5)
       - echo $AMAZON_LINUX_VERSION
 
       # Download and install the latest Chromedriver based on architecture and Amazon Linux version
