--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,23 +8,18 @@ phases:
   pre_build:
     commands:
       - echo "Installing Chrome and Chromedriver"
-  
-      # Install Chrome
-      - echo "[google-chrome]" | tee /etc/yum.repos.d/google-chrome.repo
-      - echo "name=google-chrome" | tee -a /etc/yum.repos.d/google-chrome.repo
-      - echo "baseurl=http://dl.google.com/linux/chrome/rpm/stable/x86_64" | tee -a /etc/yum.repos.d/google-chrome.repo
-      - echo "enabled=1" | tee -a /etc/yum.repos.d/google-chrome.repo
-      - echo "gpgcheck=1" | tee -a /etc/yum.repos.d/google-chrome.repo
-      - echo "gpgkey=https://dl-ssl.google.com/linux/linux_signing_key.pub" | tee -a /etc/yum.repos.d/google-chrome.repo
-      - yum install -y google-chrome-stable
-  
+
+      # Download and install Google Chrome
+      - CHROME_URL="https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm"
+      - curl -O $CHROME_URL
+      - yum localinstall -y google-chrome-stable_current_x86_64.rpm
+
       # Determine AWS CodeBuild environment architecture
       - AWS_CODEBUILD_ARCH=$(uname -m)
-  
+
       # Determine Amazon Linux version
-      - AMAZON_LINUX_VERSION=$(cat /etc/system-release-cpe | cut -d -f5)
-      - echo $AMAZON_LINUX_VERSION
-  
+      - AMAZON_LINUX_VERSION=$(cat /etc/system-release-cpe | cut -d: -f5)
+
       # Download and install the latest Chromedriver based on architecture and Amazon Linux version
       - |
         if [ "$AWS_CODEBUILD_ARCH" == "x86_64" ] && [ "$AMAZON_LINUX_VERSION" == "2" ]; then
@@ -34,7 +29,7 @@ phases:
           echo "Unsupported architecture or Amazon Linux version: $AWS_CODEBUILD_ARCH / $AMAZON_LINUX_VERSION"
           exit 1
         fi
-  
+
         curl -o chromedriver.zip $CHROMEDRIVER_URL
         unzip chromedriver.zip
         chmod +x chromedriver
