--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,30 +9,27 @@ phases:
     commands:
       - echo "Installing Chromedriver"
   
-      # Determine Amazon Linux version
-      - AMAZON_LINUX_VERSION=$(awk -F= '/^VERSION_ID/ { gsub(/"/, "", $2); print $2 }' /etc/os-release)
-  
       # Determine AWS CodeBuild environment architecture
       - AWS_CODEBUILD_ARCH=$(uname -m)
   
-      # Download and install the latest Chromedriver based on architecture and Amazon Linux version
+      # Determine Amazon Linux version
+      - AMAZON_LINUX_VERSION=$(awk -F= '/^VERSION_ID/ { gsub(/"/, "", $2); print $2 }' /etc/os-release)
+  
+      # Download and install Chromedriver based on architecture and Amazon Linux version
       - |
         if [ "$AWS_CODEBUILD_ARCH" == "aarch64" ] && [ "$AMAZON_LINUX_VERSION" == "2" ]; then
           CHROMEDRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE)
           CHROMEDRIVER_URL="https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
+          curl -o chromedriver.zip $CHROMEDRIVER_URL
+          unzip chromedriver.zip -d /usr/local/bin/
+          file /usr/local/bin/chromedriver
         else
           echo "Unsupported architecture or Amazon Linux version: $AWS_CODEBUILD_ARCH / $AMAZON_LINUX_VERSION"
           exit 1
         fi
   
-        curl -o chromedriver.zip $CHROMEDRIVER_URL
-        unzip chromedriver.zip
-        chmod +x chromedriver
-        mv chromedriver /usr/local/bin/
-  
       # Print the Chromedriver version for verification
       - /usr/local/bin/chromedriver -v
-
 
   build:
     commands:
