--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,18 +7,33 @@ phases:
 
   pre_build:
     commands:
-      - echo "Installing Chromedriver"
-  
-      # Install Ruby and the chromedriver-helper gem
-      - yum install -y ruby
-      - gem install chromedriver-helper
-  
-      # Use chromedriver-helper to install Chromedriver
-      - chromedriver-helper --verbose
-  
-      # Print the Chromedriver version for verification
-      - chromedriver -v
+      - echo "Installing Chrome and Chromedriver"
 
+      # Download and install Google Chrome
+      - CHROME_URL="https://dl.google.com/linux/direct/google-chrome-stable_current_x86_64.rpm"
+      - curl -O $CHROME_URL
+      - yum localinstall -y google-chrome-stable_current_x86_64.rpm
+
+      # Determine AWS CodeBuild environment architecture
+      - AWS_CODEBUILD_ARCH=$(uname -m)
+
+      # Determine Amazon Linux version
+      - AMAZON_LINUX_VERSION=$(awk -F/ '/amazon-linux/ {print $4}' /etc/os-release)
+
+      # Download and install the latest Chromedriver based on architecture and Amazon Linux version
+      - |
+        if [ "$AWS_CODEBUILD_ARCH" == "x86_64" ] && [ "$AMAZON_LINUX_VERSION" == "2" ]; then
+          CHROMEDRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE)
+          CHROMEDRIVER_URL="https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
+        else
+          echo "Unsupported architecture or Amazon Linux version: $AWS_CODEBUILD_ARCH / $AMAZON_LINUX_VERSION"
+          exit 1
+        fi
+
+        curl -o chromedriver.zip $CHROMEDRIVER_URL
+        unzip chromedriver.zip
+        chmod +x chromedriver
+        mv chromedriver /usr/local/bin/chromedriver
 
   build:
     commands:
