--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,9 +16,11 @@ phases:
 
       # Determine AWS CodeBuild environment architecture
       - AWS_CODEBUILD_ARCH=$(uname -m)
+      - echo $AWS_CODEBUILD_ARCH
 
       # Determine Amazon Linux version
       - AMAZON_LINUX_VERSION=$(awk -F/ '/amazon-linux/ {print $4}' /etc/os-release)
+      - echo $AWS_CODEBUILD_ARCH
 
       # Download and install the latest Chromedriver based on architecture and Amazon Linux version
       - |
