--- a/buildspec.yml
+++ b/buildspec.yml
@@ -24,7 +24,7 @@ phases:
 
       # Download and install the latest Chromedriver based on architecture and Amazon Linux version
       - |
-        if [ "$AWS_CODEBUILD_ARCH" == "x86_64" ] && [ "$AMAZON_LINUX_VERSION" == "2" ]; then
+        if [ "$AWS_CODEBUILD_ARCH" == "x86_64" ]; then
           CHROMEDRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE)
           CHROMEDRIVER_URL="https://chromedriver.storage.googleapis.com/${CHROMEDRIVER_VERSION}/chromedriver_linux64.zip"
         else
