--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,11 +5,6 @@ phases:
     runtime-versions:
       python: 3.9
     commands:
-      - curl -LO https://amazonlinux.pkgs.org/2023/amazonlinux-x86_64/at-spi2-atk-2.38.0-2.amzn2023.0.2.x86_64.rpm
-      - curl -LO https://amazonlinux.pkgs.org/2023/amazonlinux-x86_64/at-spi2-core-2.40.3-1.amzn2023.0.1.x86_64.rpm
-      - curl -LO https://amazonlinux.pkgs.org/2/amazonlinux-core-x86_64/libxkbcommon-0.7.1-1.amzn2.0.2.x86_64.rpm
+      - wget https://cdn.amazonlinux.com/2/core/2.0/x86_64/6b0225ccc542f3834c95733dcf321ab9f1e77e6ca6817469771a8af7c49efe6c/../../../../../blobstore/0d224ebadae35334ee7144600225e95aacee89483b88715a885db490193a1990/libxkbcommon-0.7.1-1.amzn2.x86_64.rpm
       - ls -lhrt
-      - yum install -y at-spi2-atk-2.38.0-2.amzn2023.0.2.x86_64.rpm
-      - yum install -y at-spi2-core-2.40.3-1.amzn2023.0.1.x86_64.rpm
-      - yum install -y libxkbcommon-0.7.1-1.amzn2.0.2.x86_64.rpm
-      
+      - yum install libxkbcommon-0.7.1-1.amzn2.x86_64.rpm
