--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,4 +7,4 @@ phases:
     commands:
       - wget https://cdn.amazonlinux.com/2/core/2.0/x86_64/6b0225ccc542f3834c95733dcf321ab9f1e77e6ca6817469771a8af7c49efe6c/../../../../../blobstore/0d224ebadae35334ee7144600225e95aacee89483b88715a885db490193a1990/libxkbcommon-0.7.1-1.amzn2.x86_64.rpm
       - ls -lhrt
-      - yum install libxkbcommon-0.7.1-1.amzn2.x86_64.rpm
+      - yum install libxkbcommon-0.7.1-1.amzn2.x86_64.rpm -y
